# VCR-GauS

./: .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  train.py  trainer.py
bash_scripts/: 0_train.sh  1_preprocess_tnt.sh  2_extract_normal_dsine.sh  3_extract_mask.sh  4_extract_normal_geow.sh  convert.sh  install.sh
configs/: config.py  config_base.yaml  reconstruct.yaml
configs/360_v2/: base.yaml
configs/dtu/: base.yaml  dtu_scan24.yaml
configs/scannetpp/: base.yaml
configs/tnt/: Courthouse.yaml  Meetingroom.yaml  base.yaml
evaluation/: crop_mesh.py  eval_tnt.py  metrics.py  render.py
evaluation/eval_dtu/: evaluate_single_scene.py
evaluation/tnt_eval/: registration.py  run.py
gaussian_renderer/: __init__.py
process_data/: convert.py  convert_360_to_json.py  convert_data_to_json.py  convert_dtu_to_json.py  convert_tnt_to_json.py  extract_mask.py  extract_normal.py  extract_normal_geo.py  visualize_colmap.ipynb  visualize_transforms.ipynb
python_scripts/: run_base.py  run_dtu.py  run_mipnerf360.py  run_tnt.py  show_360.py  show_dtu.py  show_tnt.py
scene/: __init__.py  appearance_network.py  cameras.py  dataset_readers.py  gaussian_model.py
tools/: camera.py  camera_utils.py  crop_mesh.py  denoise_pcd.py  depth2mesh.py  distributed.py  general_utils.py  graphics_utils.py  loss_utils.py  math_utils.py  mesh_utils.py  normal_utils.py  prune.py  render_utils.py  semantic_id.py  visualization.py  visualize.py
